package entities.auth;

public interface AbstractUser {
  String getUid();

  String getName();
}
