package use_case.signup;

public interface SignupInputBoundary {
  void execute(SignupInputData signupInputData);
}
